# betfair-browser

./: .dockerignore  .gitignore  Aptfile  Dockerfile  LICENSE  Pipfile  Procfile  README.md  browser_app.py  browser_local.py  docker-compose.yml  makecss.py  pyproject.toml  requirements.txt
.github/workflows/: poetry_exporter.yml
.heroku/: run.sh
browser/: filetracker.py  marketinfo.py  profit.py  text.py
browser/callbacks/: featureconfigs.py
browser/tables/: runners.py
mybrowser/: __init__.py  app.py  bfcache.py  boussole.yml  browser.py  components.py  config.py  config.txt  data.py  dbdefs.py  error_catcher.py  exceptions.py  filetracker.py  guide.md  intermediary.py  intermeds.py  layout.py  logger.py  makecss.py  marketinfo.py  profit.py
mybrowser/cache/: cache.py
mytrading/: __init__.py  betting.py  bf_feature.py  bf_strategy.py  bf_trademachine.py  bf_tradetracker.py  bf_types.py  bf_utils.py  bf_visualisation.py  bf_window.py  configs.py  exceptions.py  oddschecker.py  visual.py
myutils/: __init__.py  betfair.py  betfairsamples.py  betting.py  bf_feature.py  bf_strategy.py  bf_strategy_old.py  bf_strategy_scalp.py  bf_trademachine.py  bf_tradetracker.py  bf_types.py  bf_utils.py  bf_visualisation.py  bf_window.py  counter.py  customlogging.py  dash.py  dashutils.py  datetime.py  dbcache.py  deepdict.py  dictionaries.py  dump.py  edgedetector.py  exceptions.py  files.py  general.py  generic.py  guiserver.py  importer.py  json_file.py  jsonfile.py  logging.py  my_plotting.py  myclass.py  mydash.py  mydict.py  mylogging.py  mypath.py  myregistrar.py  (+9 more)
(+226 files in other folders)
