[tool.poetry]
name = "betfair-browser"
version = "0.1.0"
description = ""
authors = ["Joel Edwardson <joel.edwardson1@gmail.com>"]
readme = "README.md"
#packages = [{include = "betfair_browser"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
setuptools = "^59.4.0"
celery = "^5.2.1"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
betfairlightweight = "^2.15.1"
flumine = "^1.20.10"
keyring = "^23.2.1"
numpy = "^1.21.4"
plotly = "^5.4.0"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"
dash = "^2.0.0"
jsonpickle = "^2.0.0"
beautifulsoup4 = "^4.10.0"
PyYAML = "^6.0"
Flask-Caching = "^1.10.1"
dash-bootstrap-components = "^1.0.0"
dateparser = "^1.1.0"
sqlalchemy-filters = "^0.12.0"
dash-extensions = "^0.0.65"
pydantic = "^1.8.2"
boussole = "^2.0.0"
gunicorn = "^20.1.0"
SecretStorage = "^3.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
